--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@types/multer": "^1.4.7",
     "csv-parse": "^4.16.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2"
   },
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "@types/express": "^4.17.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
