--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "csv-parse": "^4.16.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
     "swagger-ui-express": "^4.1.6",
+    "typeorm": "^0.2.35",
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn --poll src/server.ts"
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn --poll src/server.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
   },
   "devDependencies": {
-    "@types/multer": "^1.4.7",
     "@types/express": "^4.17.12",
+    "@types/multer": "^1.4.7",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6",
